--- a/search-link-generator/index.html
+++ b/search-link-generator/index.html
@@ -13,8 +13,9 @@
         <h1 class="h3 mt-4 mb-3">Amazon & DMM & Google 検索リンク生成</h1>
         
         <div class="mb-4">
-            <p>歴史上の人物を複数人調べる時に毎回AmazonのKindleを買おうとしてアプリの画面が開いて面倒だったのでカンマ区切りで入力した単語からAmazon、dmm、Google検索のリンクを生成するツールです。
-デフォルトで幕末の人物が入っていますが、例えば「吉田茂, 池田勇人, 佐藤栄作, 田中角栄」といれても活用できます。</p>
+            <p>カンマ区切りで入力した単語からAmazon、DMM、Google検索のリンクを生成するツールです。デフォルトで幕末の人物が入っていますが、例えば「吉田茂, 池田勇人, 佐藤栄作, 田中角栄」といれても活用できます。</p>
+	<p>どうしてもiPhoneでアプリが開いてしまう場合：<a href="https://www.google.com/search?q=iPhone+%E3%83%96%E3%83%A9%E3%82%A6%E3%82%B6%E3%81%A7%E9%96%8B%E3%81%8D%E3%81%9F%E3%81%84+%E3%82%A2%E3%83%97%E3%83%AA%E3%81%AB%E9%A3%9B%E3%81%B0%E3%81%AA%E3%81%84%E3%82%88%E3%81%86%E3%81%AB%E3%81%99%E3%82%8B">iPhoneでリンクを開くとアプリに飛ばないようにする方法を検索する</a>。</p>
+
         </div>
 
         <div class="form-group">
