スマホでのレイアウト調整

--- a/search-link-generator/index.html
+++ b/search-link-generator/index.html
@@ -11,11 +11,8 @@
 <body>
     <div id="app" class="container">
         <h1 class="h3 mt-4 mb-3">Amazon & DMM & Google & YouTube 検索リンク生成</h1>
-        
-
-
         <div class="form-group">
-            <label for="searchTerms">検索ワード（コンマ区切り）:</label>
+<!--             <label for="searchTerms">検索ワード（コンマ区切り）:</label> -->
             <input id="searchTerms" type="text" class="form-control" v-model="searchTermsInput">
         </div>
 
