refactor: search-link-generatorを単独リポジトリに分離

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span>ランダムにお題を生成するツール。</span>
             </li>
             <li>
-                <a href="search-link-generator/index.html">Search Link Generator</a><br>
+                <a href="https://mayholiholi.github.io/search-link-generator/" target="_blank">Search Link Generator</a><br>
                 <span>指定されたキーワードに基づいてリンクを生成するツール。</span>
             </li>
             <li>
